--- a/.env
+++ b/.env
@@ -10,4 +10,6 @@ MAIL_PASSWORD=CBUg6stk4ETFRSma
 
 ALLOWED_CLIENTS=http://localhost:3000,http://localhost:5000,http://localhost:3300,http://localhost:10000
 
+JWT_SECRET=your_jwt_secret
+ENCRYPTION_KEY=your_encryption_key
 
