--- a/package.json
+++ b/package.json
@@ -1,23 +1,25 @@
 {
-  "name": "FILE-SHARING",
+  "name": "inshare_BUBT",
   "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT",
-  "scripts": {
-    "dev": "nodemon server.js",
-    "serve": "node server.js"
+  "main": "server.js",
+
+  "engines": {
+    "node": ">=14.0.0"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
-    "ejs": "^3.1.10",
-    "express": "^4.21.1",
-    "mongoose": "^8.8.3",
-    "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.9.16",
-    "uuid": "^11.0.3"
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.0.12",
+    "multer": "^1.4.3",
+    "nodemailer": "^6.7.0",
+    "qrcode": "^1.4.4",
+    "uuid": "^8.3.2"
   },
-  "devDependencies": {
-    "nodemon": "^3.1.7"
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   }
 }
