--- a/package.json
+++ b/package.json
@@ -8,14 +8,16 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
-    "dotenv": "^10.0.0",
-    "express": "^4.17.1",
+    "dotenv": "^16.4.7",
+    "ejs": "^3.1.10",
+    "express": "^4.21.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.12",
-    "multer": "^1.4.3",
-    "nodemailer": "^6.7.0",
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.16",
+    "path": "^0.12.7",
     "qrcode": "^1.4.4",
-    "uuid": "^8.3.2"
+    "uuid": "^11.0.3"
   },
   "scripts": {
     "start": "node server.js",
