--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.21.2",
     "fs-extra": "^11.2.0",
     "jsonwebtoken": "^9.0.2",
+    "mime-types": "^2.1.35",
     "mongoose": "^6.0.12",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.16",
